Bug 127257 - Focus should be in the newly inserted table first cell after table is inserted using the toolbar insert table control
Summary: Focus should be in the newly inserted table first cell after table is inserte...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
6.4.0.0.alpha1+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:6.4.0
Keywords:
Depends on:
Blocks:
 
Reported: 2019-09-01 01:08 UTC by Jim Raykowski
Modified: 2019-09-09 03:25 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jim Raykowski 2019-09-01 01:08:40 UTC
Focus is returned to the previous focus after a table is inserted using the insert table control. Using keyboard navigation to get to the insert table control will always result in the toolbar in which the control is in having focus after table insert. Using the mouse will result in focus returning where it was previous to inserting table.

To repro focus not being placed in the first cell of the newly inserted table after insert using keyboard use F6 and arrow keys to keyboard navigate to the insert table control and insert a table.

Results: Focus is on toolbar insert table control.
Expected Results: see Expected Results below.

To repro focus not being place in the first cell of the newly inserted table after insert using mouse:
1)  Mouse click on any combo box or control that grabs focus (Set Paragraph Style, Font Name, Fonts Size are some).
2 ) Click on Insert Table control and insert a table.

Results:  Focus returns to previous control that had focus.
Expected results: Focus is in first cell of newly inserted table.
Comment 1 raal 2019-09-03 18:18:08 UTC
I can confirm with Version: 6.4.0.0.alpha0+
Build ID: 2bed8af91fc2654b9ed2432f969d32d5741a529b
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3;
Comment 2 Commit Notification 2019-09-08 20:01:33 UTC
Jim Raykowski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/f76dbe5dc581845996a8bd5f5109c5e2ff5a27b0%5E%21

tdf#127257 Place focus in table after table insert

It will be available in 6.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.