tdf#127257 Place focus in table after table insert

Change-Id: I85860fbdae4aa1dc1cd4ae8f8107c6adbd964474